fixed alignment of previous and next buttons

--- a/client/src/components/CheckerPagePreview.module.css
+++ b/client/src/components/CheckerPagePreview.module.css
@@ -35,41 +35,37 @@
     align-items: center;
 }
 
-.overlayButtons {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    display: flex;
-    gap: 10px;
-}
-
 /* Styles for the overlaid <p> tag */
 .overlayText {
     font-family: "Montserrat SemiBold";
     color: #03045E; /* Change the color to your desired text color */
     pointer-events: none; /* Prevent the <p> tag from intercepting events */
-    margin-bottom: 1%;
+    margin-bottom: 2%;
 }
 
 .preview {
     position: relative;
     width: 100%;
-    height: 50%;
+    height: 100%;
 }
 
 .checkerPageWrapper {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center horizontally */
+    justify-content: center; /* Center vertically */
 }
-
 
 .overlayButtons {
     position: absolute;
-    top: 1%;
+    top: 4%;
     right: 3%;
     left: 2%;
     display: flex;
-    gap: 1%;
+    gap: 1rem;
     z-index: 2;
+    transform: translateY(-50%);
 }
 
 .overlayButtons a {
@@ -86,7 +82,7 @@
     background-color: #f0f0f0;
     border: none;
     color: #333;
-    margin-top: 40%;
+    margin-top: 30rem;
     margin-left: 1%;
     cursor: pointer;
     border-radius: 4px;
@@ -98,9 +94,8 @@
 }
 
 .overlayButtons button:last-child {
-    margin-left: 90%;
+    margin-left: auto;
 }
-
 
 .pagination {
     display: flex;
@@ -138,6 +133,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    margin-bottom: -1.5%;
 }
 
 .copyButton {
